--- a/basico/system/pandas/01 - Series em Pandas.ipynb
+++ b/basico/system/pandas/01 - Series em Pandas.ipynb
@@ -2,65 +2,45 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "300f94b7",
    "metadata": {},
    "source": [
-    "## Series"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cd154a3",
-   "metadata": {},
-   "source": [
-    "### Semelhante a matrizes do NumPy porém com rótulos nos eixos."
+    "## Series\n",
+    "\n",
+    "## Semelhante as matrizes do NumPY porém com rótulos nos eixos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bff48a04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c29ab96e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56674a8e",
    "metadata": {},
    "source": [
-    "#### Criando series"
+    "### Criando series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "14d0277f",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista1 = ['a', 'b', 'c']\n",
-    "lista2 = [1, 2, 3]\n",
-    "arr = np.array([10, 20, 30,])\n",
-    "d = {'a': 100, 'b': 200, 'c': 300}"
+    "lista1 = ['a','b','c']\n",
+    "lista2 = [1,2,3]\n",
+    "arr = np.array([10,20,30])\n",
+    "d = {'a':100, 'b':200, 'c':300}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3ec2d547",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +52,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,8 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5e983429",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +75,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,8 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7b72a1ac",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +98,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "54948b70",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +121,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "96cbbb31",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +144,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,39 +155,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d24e4e8",
    "metadata": {},
    "source": [
-    "#### Utilizando índices"
+    "### Utilizando índices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3f7388f6",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "serie1 = pd.Series([1, 2, 3, 4], ['João', 'Maria', 'Pedro', 'Carlos'])"
+    "serie1 = pd.Series([1, 2, 3, 4], index = ['João', 'Pedro', 'Maria', 'Carlos'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1d9a1a6e",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "João      1\n",
-       "Maria     2\n",
-       "Pedro     3\n",
+       "Pedro     2\n",
+       "Maria     3\n",
        "Carlos    4\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,31 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e1a6802b",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "serie2 = pd.Series([1, 2, 5, 6], ['Pedro', 'Roberto', 'João', 'Carlos'])"
+    "serie2 = pd.Series([1,2,5,6], index = ['Pedro', 'Roberta', 'João', 'Carlos'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a6ab0437",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pedro      1\n",
-       "Roberto    2\n",
+       "Roberta    2\n",
        "João       5\n",
        "Carlos     6\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,8 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "bcd183f3",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +237,7 @@
        "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "7465816e",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -288,43 +257,39 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "serie2['Roberto']"
+    "serie2['Roberta']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "274b373e",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Users\\Emanuel.TMONKEY\\AppData\\Local\\Programs\\Python\\Python311\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/Emanuel.TMONKEY/AppData/Local/Programs/Python/Python311/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "text/plain": [
+       "Carlos     10.0\n",
+       "João        6.0\n",
+       "Maria       NaN\n",
+       "Pedro       3.0\n",
+       "Roberta     NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "serie1 + serie2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eae82fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -343,9 +308,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
