--- a/basico/system/pandas/03 - Dados Ausentes em Pandas.ipynb
+++ b/basico/system/pandas/03 - Dados Ausentes em Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d9942bad",
+   "id": "d95f9416",
    "metadata": {},
    "source": [
     "## Dados Ausentes em Pandas"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94bc5607",
+   "id": "bbd2e00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fd1e2b88",
+   "execution_count": 5,
+   "id": "5abac5b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame({'A': [10, 20, np.nan], \n",
-    "                   'B': [40, np.nan, np.nan],\n",
-    "                   'C': [70, 80, 90]})"
+    "                  'B': [40, np.nan, np.nan], \n",
+    "                  'C': [70, 80, 90]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ad4c5030",
+   "execution_count": 6,
+   "id": "b2357eb3",
    "metadata": {},
    "outputs": [
     {
@@ -68,32 +68,32 @@
        "      <th>0</th>\n",
        "      <td>10.0</td>\n",
        "      <td>40.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      A     B     C\n",
-       "0  10.0  40.0  70.0\n",
-       "1  20.0   NaN   NaN\n",
-       "2   NaN   NaN  90.0"
+       "      A     B   C\n",
+       "0  10.0  40.0  70\n",
+       "1  20.0   NaN  80\n",
+       "2   NaN   NaN  90"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea5728c2",
+   "id": "7ff396e6",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9d39447e",
+   "id": "5d1c8cb5",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,78 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c34b228b",
+   "id": "857ba0c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A     B   C\n",
+       "0  10.0  40.0  70\n",
+       "1  20.0   NaN  80\n",
+       "2   NaN   NaN  90"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "086232bc",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +348,7 @@
        "1  20.0   NaN  80"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7eae7938",
+   "execution_count": 16,
+   "id": "54b5fdd2",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +419,7 @@
        "2  Correto  Correto  90"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,8 +430,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c862e077",
+   "execution_count": 17,
+   "id": "6ae3d8f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A     B   C\n",
+       "0  10.0  40.0  70\n",
+       "1  20.0   NaN  80\n",
+       "2   NaN   NaN  90"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "eb0b30f1",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +514,7 @@
        "Name: A, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,6 +522,14 @@
    "source": [
     "df['A'].fillna(value = df['A'].mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b2c4c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
