--- a/basico/system/pandas/04 - Groupby em Pandas.ipynb
+++ b/basico/system/pandas/04 - Groupby em Pandas.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1dcdb64c",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "022b7c46",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dados = {'Setor': ['Frutas', 'Frutas', 'Bebidas', 'Bebidas', 'Carnes', 'Carnes'], \n",
-    "        'Vendedores': ['Aline', 'Carlos', 'Aline', 'João', 'Flavia', 'João'], \n",
-    "        'Venda': [100, 200, 300, 400, 500, 600]}"
+    "dados = {'Setor':['Frutas','Frutas', 'Bebidas','Bebidas','Carnes','Carnes'],\n",
+    "        'Vendedores': ['Aline','Carlos','Aline','Joao','Flavia','Joao'],\n",
+    "        'Venda':[100,200,300,400,500,600]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b9dbd4cf",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "34283622",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +82,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bebidas</td>\n",
-       "      <td>João</td>\n",
+       "      <td>Joao</td>\n",
        "      <td>400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -98,7 +94,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Carnes</td>\n",
-       "      <td>João</td>\n",
+       "      <td>Joao</td>\n",
        "      <td>600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -110,12 +106,12 @@
        "0   Frutas      Aline    100\n",
        "1   Frutas     Carlos    200\n",
        "2  Bebidas      Aline    300\n",
-       "3  Bebidas       João    400\n",
+       "3  Bebidas       Joao    400\n",
        "4   Carnes     Flavia    500\n",
-       "5   Carnes       João    600"
+       "5   Carnes       Joao    600"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,17 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8780d077",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001A80072D810>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000014BFC9D3128>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0ba41e75",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,29 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "eb0c777e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001A80073F9D0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "setor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8de76a70",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +212,7 @@
        "Frutas       Aline    100"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1c9006e5",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +284,7 @@
        "Frutas       Aline    100"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,8 +295,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d7817fa5",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setor</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bebidas</th>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnes</th>\n",
+       "      <td>550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frutas</th>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Venda\n",
+       "Setor         \n",
+       "Bebidas    350\n",
+       "Carnes     550\n",
+       "Frutas     150"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setor.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setor</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bebidas</th>\n",
+       "      <td>70.710678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnes</th>\n",
+       "      <td>70.710678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frutas</th>\n",
+       "      <td>70.710678</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Venda\n",
+       "Setor             \n",
+       "Bebidas  70.710678\n",
+       "Carnes   70.710678\n",
+       "Frutas   70.710678"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setor.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Vendedores</th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setor</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bebidas</th>\n",
+       "      <td>Joao</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnes</th>\n",
+       "      <td>Joao</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frutas</th>\n",
+       "      <td>Carlos</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Vendedores  Venda\n",
+       "Setor                    \n",
+       "Bebidas       Joao    400\n",
+       "Carnes        Joao    600\n",
+       "Frutas      Carlos    200"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setor.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +562,7 @@
        "Frutas            2      2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,81 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5f72d55e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Vendedores</th>\n",
-       "      <th>Venda</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Setor</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bebidas</th>\n",
-       "      <td>João</td>\n",
-       "      <td>400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Carnes</th>\n",
-       "      <td>João</td>\n",
-       "      <td>600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Frutas</th>\n",
-       "      <td>Carlos</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Vendedores  Venda\n",
-       "Setor                    \n",
-       "Bebidas       João    400\n",
-       "Carnes        João    600\n",
-       "Frutas      Carlos    200"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "setor.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "a6198841",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +582,7 @@
        "2100"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,8 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "5a4ce477",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +609,7 @@
       " 1   Vendedores  6 non-null      object\n",
       " 2   Venda       6 non-null      int64 \n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 276.0+ bytes\n"
+      "memory usage: 272.0+ bytes\n"
      ]
     }
    ],
@@ -518,8 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6a924a07",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +670,98 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bebidas</td>\n",
-       "      <td>João</td>\n",
+       "      <td>Joao</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Carnes</td>\n",
+       "      <td>Flavia</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Carnes</td>\n",
+       "      <td>Joao</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Setor Vendedores  Venda\n",
+       "0   Frutas      Aline    100\n",
+       "1   Frutas     Carlos    200\n",
+       "2  Bebidas      Aline    300\n",
+       "3  Bebidas       Joao    400\n",
+       "4   Carnes     Flavia    500\n",
+       "5   Carnes       Joao    600"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Setor</th>\n",
+       "      <th>Vendedores</th>\n",
+       "      <th>Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Frutas</td>\n",
+       "      <td>Aline</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Frutas</td>\n",
+       "      <td>Carlos</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bebidas</td>\n",
+       "      <td>Aline</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bebidas</td>\n",
+       "      <td>Joao</td>\n",
        "      <td>400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -588,11 +779,11 @@
        "0   Frutas      Aline    100\n",
        "1   Frutas     Carlos    200\n",
        "2  Bebidas      Aline    300\n",
-       "3  Bebidas       João    400\n",
+       "3  Bebidas       Joao    400\n",
        "4   Carnes     Flavia    500"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,8 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "7f66efae",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +839,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bebidas</td>\n",
-       "      <td>João</td>\n",
+       "      <td>Joao</td>\n",
        "      <td>400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -661,7 +851,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Carnes</td>\n",
-       "      <td>João</td>\n",
+       "      <td>Joao</td>\n",
        "      <td>600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -672,12 +862,12 @@
        "     Setor Vendedores  Venda\n",
        "1   Frutas     Carlos    200\n",
        "2  Bebidas      Aline    300\n",
-       "3  Bebidas       João    400\n",
+       "3  Bebidas       Joao    400\n",
        "4   Carnes     Flavia    500\n",
-       "5   Carnes       João    600"
+       "5   Carnes       Joao    600"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,8 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "75c7d9ac",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +954,7 @@
        "max    600.000000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +966,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f97d10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -803,5 +998,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
